--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,33 +1,22 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# The following keys must be escaped otherwise they will not be retrieved by
-# the default I18n backend:
-#
-# true, false, on, off, yes, no
-#
-# Instead, surround them with single quotes.
-#
-# en:
-#   'true': 'foo'
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
-  hello: "Hello world"
+  base_title: "Read Book Online App"
+  invalid_user: "User is not found"
+  sessions:
+    new:
+      sign_in: "Sign In"
+      forgot_pw: "Forgot password?"
+      pl_h_e: "Your email"
+      pl_h_p: "Your password"
+      remember_me: "Remember me"
+      login: "Login"
+      login_gg: "Login with Github"
+      new_account: "Don't have an account!"
+      sign_up: "Sign Up"
+      btn_signup: "Sign Up"
+      btn_signup_gg: "Sign Up with Github"
+      or: "or"
+      invalid_login: "Invalid email/password combination"
+      anonymous_user: "Anonymous User"
+  shared:
+    error_messages:
+      the: "The "
